syntax = "proto3";

option csharp_namespace = "Softplan.MP.DistribuicaoSegundoGrau.Domain.Distribuicoes.Messages.Protos";

message ProcessoVagasRemovidasDistribuicaoMesmaVaga {
    repeated VagasRemovidasDistribuicaoMesmaVaga vagas_removidas = 1;
    string motivo = 2;
}

message VagasRemovidasDistribuicaoMesmaVaga {
    int32 id_vaga = 1;
    string descricao = 2;
}